--- a/index.html
+++ b/index.html
@@ -7,9 +7,198 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <table>
+        <tr>
+            <th colspan="4">
+                <select name="category2">
+                    <option value="">CALLS - NEED PRICE TO GO UP</option>
+                    <option value="">PUTS - NEED PRICE TO GO DOWN</option>
+                </select>
+            </th>
+            <th>TSLA</th>
+            <th>
+                <select name="category2">
+                    <option value="">1 DAY (April 2nd)</option>
+                    <option value="">1 MONTH (April 25th)</option>
+                    <option value="">3 MONTHS (July 25th)</option>
+                </select>
+            </th>
+            <th>
+                <select name="category2">
+                    <option value="electronics">1 Month</option>
+                    <option value="furniture">3 Month</option>
+                    <option value="clothing">1 Year</option>
+                    <!-- Add more options as needed -->
+                </select>
+            </th>
+        </tr>
+        <tr>
+            <th>Loss / Day</th>
+            <th>Open Contracts</th>
+            <th>Contracts Bought</th>
+            <th>P&L / $1 Change</th>
+            <th>Sellers</th>
+            <th>Buyers</th>
+            <th>
+                $100.34
+            </th>
+        </tr>
+        <tr class="ITM">
+            <td>$16.00</td>
+            <td>19,000</td>
+            <td>20,000</td>
+            <td>$70.00</td>
+            <td>$200.00</td>
+            <td>$199.00</td>
+            <td>98</td>
+        </tr>
+        <tr class="ITM">
+            <td>$18.00</td>
+            <td>500</td>
+            <td>10,000</td>
+            <td>$61.00</td>
+            <td>$167.00</td>
+            <td>$166.00</td>
+            <td>99</td>
+        </tr>
+        <tr class="ITM">
+            <td>$19.00</td>
+            <td>4,902</td>
+            <td>500</td>
+            <td>$50.00</td>
+            <td>$138.00</td>
+            <td>$136.00</td>
+            <td>100</td>
+        </tr>
+        <tr class="ATM">
+            <td>$17.00</td>
+            <td>5,222</td>
+            <td>100,000</td>
+            <td>$39.00</td>
+            <td>$113.00</td>
+            <td>$112.00</td>
+            <td>101</td>
+        </tr>
+        <tr class="OTM">
+            <td>$15.00</td>
+            <td>1,000</td>
+            <td>3,000</td>
+            <td>$28.00</td>
+            <td>$99.00</td>
+            <td>$98.00</td>
+            <td>102</td>
+        </tr>
+        <tr class="OTM">
+            <td>$12.00</td>
+            <td>100</td>
+            <td>78,391</td>
+            <td>$19.00</td>
+            <td>$62.00</td>
+            <td>$61.00</td>
+            <td>103</td>
+        </tr>
+    </table>
+
+
+
+    <!-- WEBULL -->
+
+    <table>
+        <tr>
+            <th colspan="4">
+                <select name="category2">
+                    <option value="">CALLS - NEED PRICE TO GO UP</option>
+                    <option value="">PUTS - NEED PRICE TO GO DOWN</option>
+                </select>
+            </th>
+            <th>TSLA</th>
+            <th>
+                <select name="category2">
+                    <option value="">1 DAY <br> (April 2nd)</option>
+                    <option value="">1 MONTH (April 25th)</option>
+                    <option value="">3 MONTHS (July 25th)</option>
+                </select>
+            </th>
+            <th>
+                <select name="category2">
+                    <option value="electronics">1 Month</option>
+                    <option value="furniture">3 Month</option>
+                    <option value="clothing">1 Year</option>
+                    <!-- Add more options as needed -->
+                </select>
+            </th>
+        </tr>
+        <tr>
+            <th>Loss / Day</th>
+            <th>Open Contracts</th>
+            <th>Contracts Bought</th>
+            <th>P&L / $1 Change</th>
+            <th>Sellers</th>
+            <th>Buyers</th>
+            <th>
+                <select name="category2">
+                    <option value="electronics">1 Month</option>
+                    <option value="furniture">3 Month</option>
+                    <option value="clothing">1 Year</option>
+                    <!-- Add more options as needed -->
+                </select>
+            </th>
+        </tr>
+        <tr class="ITMW">
+            <td>$16.00</td>
+            <td>19,000</td>
+            <td>20,000</td>
+            <td>$70.00</td>
+            <td>$200.00</td>
+            <td>$199.00</td>
+            <td>98</td>
+        </tr>
+        <tr class="ITMW">
+            <td>$18.00</td>
+            <td>500</td>
+            <td>10,000</td>
+            <td>$61.00</td>
+            <td>$167.00</td>
+            <td>$166.00</td>
+            <td>99</td>
+        </tr>
+        <tr class="ITMW">
+            <td>$19.00</td>
+            <td>4,902</td>
+            <td>500</td>
+            <td>$50.00</td>
+            <td>$138.00</td>
+            <td>$136.00</td>
+            <td>100</td>
+        </tr>
+        <tr class="ATMW">
+            <td>$17.00</td>
+            <td>5,222</td>
+            <td>100,000</td>
+            <td>$39.00</td>
+            <td>$113.00</td>
+            <td>$112.00</td>
+            <td>101</td>
+        </tr>
+        <tr class="OTMW">
+            <td>$15.00</td>
+            <td>1,000</td>
+            <td>3,000</td>
+            <td>$28.00</td>
+            <td>$99.00</td>
+            <td>$98.00</td>
+            <td>102</td>
+        </tr>
+        <tr class="OTMW">
+            <td>$12.00</td>
+            <td>100</td>
+            <td>78,391</td>
+            <td>$19.00</td>
+            <td>$62.00</td>
+            <td>$61.00</td>
+            <td>103</td>
+        </tr>
+    </table>
+
 </body>
 </html>
