--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Begginners Option Chain</title>
+    <title>Beginner Option Chain</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <img height="400px" width="80%" src="TrippleTop.png" alt="Chart with obvisous downwards move">
+
+    <div>
+        <div>READY TO TRADE</div>
+        <button>START</button>
+    </div>
+
     <table>
         <tr>
-            <th colspan="4">
+            <th>AAPL</th>
+            <th colspan="3">
                 <select name="category2">
                     <option value="">CALLS - NEED PRICE TO GO UP</option>
                     <option value="">PUTS - NEED PRICE TO GO DOWN</option>
                 </select>
             </th>
-            <th>TSLA</th>
-            <th>
+
+            <th colspan="2">
                 <select name="category2">
                     <option value="">1 DAY (April 2nd)</option>
                     <option value="">1 MONTH (April 25th)</option>
@@ -24,12 +33,7 @@
                 </select>
             </th>
             <th>
-                <select name="category2">
-                    <option value="electronics">1 Month</option>
-                    <option value="furniture">3 Month</option>
-                    <option value="clothing">1 Year</option>
-                    <!-- Add more options as needed -->
-                </select>
+                Strike
             </th>
         </tr>
         <tr>
@@ -37,8 +41,8 @@
             <th>Open Contracts</th>
             <th>Contracts Bought</th>
             <th>P&L / $1 Change</th>
-            <th>Sellers</th>
-            <th>Buyers</th>
+            <th>Sell</th>
+            <th>Buy</th>
             <th>
                 $100.34
             </th>
@@ -48,8 +52,8 @@
             <td>19,000</td>
             <td>20,000</td>
             <td>$70.00</td>
-            <td>$200.00</td>
-            <td>$199.00</td>
+            <td class="b">$200.00</td>
+            <td class="b">$199.00</td>
             <td>98</td>
         </tr>
         <tr class="ITM">
@@ -57,8 +61,8 @@
             <td>500</td>
             <td>10,000</td>
             <td>$61.00</td>
-            <td>$167.00</td>
-            <td>$166.00</td>
+            <td class="b">$167.00</td>
+            <td class="b">$166.00</td>
             <td>99</td>
         </tr>
         <tr class="ITM">
@@ -66,8 +70,8 @@
             <td>4,902</td>
             <td>500</td>
             <td>$50.00</td>
-            <td>$138.00</td>
-            <td>$136.00</td>
+            <td class="b">$138.00</td>
+            <td class="b">$136.00</td>
             <td>100</td>
         </tr>
         <tr class="ATM">
@@ -75,8 +79,8 @@
             <td>5,222</td>
             <td>100,000</td>
             <td>$39.00</td>
-            <td>$113.00</td>
-            <td>$112.00</td>
+            <td class="b">$113.00</td>
+            <td class="b">$112.00</td>
             <td>101</td>
         </tr>
         <tr class="OTM">
@@ -84,8 +88,8 @@
             <td>1,000</td>
             <td>3,000</td>
             <td>$28.00</td>
-            <td>$99.00</td>
-            <td>$98.00</td>
+            <td class="b">$99.00</td>
+            <td class="b">$98.00</td>
             <td>102</td>
         </tr>
         <tr class="OTM">
@@ -93,8 +97,8 @@
             <td>100</td>
             <td>78,391</td>
             <td>$19.00</td>
-            <td>$62.00</td>
-            <td>$61.00</td>
+            <td class="b">$62.00</td>
+            <td class="b">$61.00</td>
             <td>103</td>
         </tr>
     </table>
@@ -105,100 +109,114 @@
 
     <table>
         <tr>
-            <th colspan="4">
+            <th>AAPL</th>
+            <th colspan="3">
                 <select name="category2">
-                    <option value="">CALLS - NEED PRICE TO GO UP</option>
+                    <option value="">CALLS</option>
                     <option value="">PUTS - NEED PRICE TO GO DOWN</option>
                 </select>
             </th>
-            <th>TSLA</th>
-            <th>
+
+            <th colspan="2">
                 <select name="category2">
-                    <option value="">1 DAY <br> (April 2nd)</option>
-                    <option value="">1 MONTH (April 25th)</option>
-                    <option value="">3 MONTHS (July 25th)</option>
+                    <option value="">1 DAY</option>
+                    <option value="">1 MONTH</option>
+                    <option value="">3 MONTHS</option>
                 </select>
             </th>
             <th>
-                <select name="category2">
-                    <option value="electronics">1 Month</option>
-                    <option value="furniture">3 Month</option>
-                    <option value="clothing">1 Year</option>
-                    <!-- Add more options as needed -->
-                </select>
+                Strike
             </th>
         </tr>
         <tr>
-            <th>Loss / Day</th>
-            <th>Open Contracts</th>
-            <th>Contracts Bought</th>
-            <th>P&L / $1 Change</th>
-            <th>Sellers</th>
-            <th>Buyers</th>
+            <th>Theta</th>
+            <th>Open Interest</th>
+            <th>Volitility</th>
+            <th>Delta</th>
+            <th>Ask</th>
+            <th>Bid</th>
             <th>
-                <select name="category2">
-                    <option value="electronics">1 Month</option>
-                    <option value="furniture">3 Month</option>
-                    <option value="clothing">1 Year</option>
-                    <!-- Add more options as needed -->
-                </select>
+                $100.34
             </th>
         </tr>
         <tr class="ITMW">
-            <td>$16.00</td>
+            <td>.16</td>
             <td>19,000</td>
             <td>20,000</td>
-            <td>$70.00</td>
-            <td>$200.00</td>
-            <td>$199.00</td>
+            <td>.70</td>
+            <td class="sell b">2.00</td>
+            <td class="buy b">1.99</td>
             <td>98</td>
         </tr>
         <tr class="ITMW">
-            <td>$18.00</td>
+            <td>.18</td>
             <td>500</td>
             <td>10,000</td>
-            <td>$61.00</td>
-            <td>$167.00</td>
-            <td>$166.00</td>
+            <td>.61</td>
+            <td class="sell b">1.67</td>
+            <td class="buy b">1.66</td>
             <td>99</td>
         </tr>
         <tr class="ITMW">
-            <td>$19.00</td>
+            <td>.19</td>
             <td>4,902</td>
             <td>500</td>
-            <td>$50.00</td>
-            <td>$138.00</td>
-            <td>$136.00</td>
+            <td>.50</td>
+            <td class="sell b">1.38</td>
+            <td class="buy b">1.36</td>
             <td>100</td>
         </tr>
         <tr class="ATMW">
-            <td>$17.00</td>
+            <td>.17</td>
             <td>5,222</td>
             <td>100,000</td>
-            <td>$39.00</td>
-            <td>$113.00</td>
-            <td>$112.00</td>
+            <td>.39</td>
+            <td class="sell b">1.13</td>
+            <td class="buy b">1.12</td>
             <td>101</td>
         </tr>
         <tr class="OTMW">
-            <td>$15.00</td>
+            <td>.15</td>
             <td>1,000</td>
             <td>3,000</td>
-            <td>$28.00</td>
-            <td>$99.00</td>
-            <td>$98.00</td>
+            <td>.28</td>
+            <td class="sell b">.99</td>
+            <td class="buy b">.98</td>
             <td>102</td>
         </tr>
         <tr class="OTMW">
-            <td>$12.00</td>
+            <td>.12</td>
             <td>100</td>
             <td>78,391</td>
-            <td>$19.00</td>
-            <td>$62.00</td>
-            <td>$61.00</td>
+            <td>.19</td>
+            <td class="sell b">.62</td>
+            <td class="buy b">.61</td>
             <td>103</td>
         </tr>
     </table>
+
+    <div>
+        <div>CONFIRM TRADE</div>
+        <button>CONFIRM</button>
+        <button>CHANGE</button>
+    </div>
+
+    <div>
+        <div>Please write down why you chose the contract you did</div>
+        <textarea placeholder="Trade Thoughts"></textarea>
+
+        <div>How Much did you pay for your contract</div>
+        <input></input>
+
+        <div>How much money would you make if the stock went up $1</div>
+        <input></input>
+
+        <div>How much money would you lose each day you hold this contract</div>
+        <input></input>
+
+        <div>Do you make money if the stock goes up or down</div>
+        <input></input>
+    </div>
 
 </body>
 </html>
